# OutlookAgent

./: .gitignore  README.md
mcp_server/: README.md  main.py  pyproject.toml
mcp_server/app/: __init__.py  create_app.py  health_check.py  sse_handler.py
mcp_server/config/: __init__.py  settings.py
mcp_server/devtools/claude/: proxy_claude_stdio.py
mcp_server/routes/: __init__.py  api.py  email_api.py  tools_api.py
mcp_server/server/: __init__.py  mcp_email_server.py
mcp_server/services/auth/: graph_auth.py
mcp_server/services/email/: __init__.py  delete_email.py  fetch_emails.py  forward_email.py  reply_email.py  send_email.py
mcp_server/transports/: __init__.py  sse_transport.py
mcp_server/utils/: __init__.py  input_utils.py  template_utils.py  validators.py
mcp_server/utils/email/: email_utils.py
scripts/: README.md  restart_server.bat  start_server.bat  stop_server.bat
