[project]
name = "mcp-server"
version = "0.1.0"
description = "Mcp server for outlook using FastMCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn",
    "starlette",
    "httpx",
    "mcp",
    "starlette-sse",
    "aiohttp (>=3.11.18,<4.0.0)",
    "msal (>=1.32.3,<2.0.0)"
]
